<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tus@todo.todo">tus</maintainer>
  <license>TODO: License declaration</license>

  <!-- Gói python (ament_python) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (tên package, KHÔNG có .msg, KHÔNG thêm module stdlib) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <!-- Phụ thuộc sang package robot/URDF -->
  <exec_depend>dhtbot_one</exec_depend>

  <!-- Numpy: dùng system package python3-numpy -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
